# inspect_wandb

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  pyproject.toml
.claude/skills/code-review/: SKILL.md
.github/: CODEOWNERS
docs/source/: configuration.md
inspect_wandb/: __init__.py  exceptions.py
inspect_wandb/config/: extras_manager.py  wandb_settings_source.py
inspect_wandb/config/settings/: base.py  models.py  weave.py
inspect_wandb/models/: hooks.py
inspect_wandb/shared/: base_hooks.py
inspect_wandb/utils/: __init__.py  ansi.py
inspect_wandb/viz/: inspect_viz_writer.py
inspect_wandb/weave/: hooks.py
inspect_wandb/weave/autopatcher/: plan.py  scorer.py
tests/: conftest.py
tests/test_config/: test_base_settings.py
tests/test_models/: test_e2e_retry_scenarios.py  test_hooks.py
tests/test_utils/: test_ansi.py
tests/test_weave/: test_autopatcher.py  test_hooks.py
