[project]
name = "inspect_wandb"
dynamic = ["version"]
authors = [
  { name="Daniel Polatajko", email="danielpolatajko@gmail.com" },
  { name="Qi Guo", email="special0831qi@gmail.com"},
  { name="Matan Shtepel", email="matan.shtepel@gmail.com" }
]
description = "InspectAI <-> Weights and Biases integration"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "inspect_ai >= 0.3.154",
  "pydantic >= 2.12, <3",
  "pydantic-settings",
  "wandb>=0.25.1",
]

[project.optional-dependencies]
weave = ["weave >= 0.52.33"]
viz = [
  "inspect-viz >= 0.3.5",
  "playwright"
]

[dependency-groups]
dev = ["pytest", "ruff", "mypy", "pre-commit", "pytest-asyncio"]
docs-dev = [
  "pre-commit>=4.3.0",
  "myst-parser>=4.0.1",
  "sphinx-rtd-theme>=3.0.2",
  "sphinx-autobuild>=2024.10.3",
  "mypy>=1.17.1",
  "sphinx-copybutton"
]

[project.urls]
Homepage = "https://github.com/DanielPolatajko/inspect_wandb"
Issues = "https://github.com/DanielPolatajko/inspect_wandb/issues"
Documentation = "https://inspect-wandb.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "inspect_wandb.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["inspect_wandb*"]

[project.entry-points.inspect_ai]
inspect_wandb = "inspect_wandb._registry"

[tool.uv.sources]
wandb = { path = "../wandb", editable = true }

[tool.ruff]
exclude = [
    "inspect_wandb/_registry.py"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "no_mock_api_key: skip the autouse mock_wandb_api_key fixture",
]
